# SSM

./: .gitignore  CHANGELOG.md  PROJECT_HEALTH_REPORT.md  README.md  README_EVENT_SYSTEM.md  alembic.ini  login.py  main.py  open_app.py  package-lock.json  pyproject.toml  requirements.txt  run.py  run_debug.py  run_tests.py  test_ui.py
.github/workflows/: pypi-publish.yml  python-app.yml  python-ci.yml  release.yml
app/controllers/: auth_controller.py  customer_controller.py  inventory_controller.py  purchases_controller.py  report_controller.py  reports_controller.py  sales_controller.py  user_controller.py
app/core/: auth.py  backup.py  event_system.py  inventory.py  reports.py  sales.py  users.py
app/data/: data_provider.py
app/models/: base.py  customer.py  customers.py  inventory.py  product.py  purchases.py  sale.py  sales.py  user.py  users.py
app/ui/: firebase_utils.py  header.py  main_layout.py  main_window.py  sidebar.py
app/utils/: ai_insights.py  auth.py  backup.py  cache_manager.py  config_manager.py  database.py  error_handler.py  event_system.py  form_helpers.py  logger.py  migrations.py  pdf_generator.py  theme_manager.py  ui_helpers.py
config/: __init__.py  config.json  database.py  init_db.py  secret_key.txt  settings.py  sqlite_db.py
data/: shop.db
docs/: API.md  USER_GUIDE.md
tests/: conftest.py  test_auth.py  test_backup.py  test_cache_manager.py  test_config.py  test_controllers.py  test_dashboard.py  test_database.py  test_error_handler.py  test_event_system.py  test_logger.py  test_models.py  test_ui.py  test_utils.py
(+29 files in other folders)
