[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-shop-manager"
version = "0.1.0"
description = "A comprehensive shop management system with inventory, sales, and reporting features"
readme = "README.md"
authors = [
    {name = "Sifat Ali", email = "sifat.ali@example.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.4.0",
    "firebase-admin>=6.0.0",
    "SQLAlchemy>=2.0.0",
    "pandas>=2.0.0",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/SifatAli008/SSM"
Repository = "https://github.com/SifatAli008/SSM.git"
Issues = "https://github.com/SifatAli008/SSM/issues"

[project.scripts]
smart-shop-manager = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"] 